org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/Property_no_call_result_in_setter_001/.project
<?xml version="1.0" encoding="UTF-8"?>
<projectDescription>
	<name>Property_no_call_result_in_setter_001</name>
	<comment></comment>
	<projects>
	</projects>
	<buildSpec>
	</buildSpec>
	<natures>
		<nature>org.kermeta.language.texteditor.eclipse.nature.KermetaNatureID</nature>
	</natures>
</projectDescription>
